# litestar-tw-dui

./: app.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  tailwind.config.js
src/static/css/: styles.css
src/templates/: base.html.j2  index.html.j2
